--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
     "@babel/polyfill": "7.2.3",
     "@babel/preset-env": "7.2.3",
     "@babel/runtime": "7.2.0",
+    "amplitudejs": "^4.0.0",
     "babel-loader": "8.0.4",
     "core-js": "2.6.1",
     "css-loader": "2.1.0",
     "cssnano": "4.1.8",
     "file-loader": "3.0.1",
-    "jplayer": "^2.9.2",
-    "jquery": "^3.3.1",
     "lodash": "4.17.11",
     "lost": "8.3.0",
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "4.7.2",
     "normalize.css": "8.0.1",
+    "plyr": "^3.4.8",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
