--- a/package.json
+++ b/package.json
@@ -12,27 +12,29 @@
   },
   "dependencies": {
     "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.2.3",
+    "@babel/plugin-proposal-class-properties": "7.3.0",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.3.2",
     "@babel/plugin-syntax-class-properties": "7.2.0",
     "@babel/plugin-syntax-export-default-from": "7.2.0",
     "@babel/plugin-syntax-export-namespace-from": "7.2.0",
     "@babel/plugin-syntax-object-rest-spread": "7.2.0",
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "7.2.0",
-    "@babel/polyfill": "7.2.3",
-    "@babel/preset-env": "7.2.3",
-    "@babel/runtime": "7.2.0",
+    "@babel/polyfill": "7.2.5",
+    "@babel/preset-env": "7.3.1",
+    "@babel/runtime": "7.3.1",
     "amplitudejs": "^4.0.0",
-    "babel-loader": "8.0.4",
-    "core-js": "2.6.1",
+    "babel-loader": "8.0.5",
+    "core-js": "2.6.4",
     "css-loader": "2.1.0",
     "cssnano": "4.1.8",
+    "del": "^3.0.0",
     "file-loader": "3.0.1",
+    "gulp": "^4.0.0",
     "lodash": "4.17.11",
-    "lost": "8.3.0",
+    "lost": "8.3.1",
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "4.7.2",
     "normalize.css": "8.0.1",
@@ -49,7 +51,7 @@
     "text-encoding": "0.7.0",
     "uglifyjs-webpack-plugin": "2.1.1",
     "url-loader": "1.1.2",
-    "webpack": "4.28.3",
+    "webpack": "4.29.3",
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "3.0.0"
   },
@@ -85,6 +87,6 @@
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
-    "webpack-cli": "3.1.2"
+    "webpack-cli": "3.2.3"
   }
 }
