--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.3.0",
+    "@babel/core": "7.3.3",
+    "@babel/plugin-proposal-class-properties": "7.3.3",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
     "@babel/plugin-proposal-object-rest-spread": "7.3.2",
@@ -27,9 +27,9 @@
     "@babel/runtime": "7.3.1",
     "amplitudejs": "^4.0.0",
     "babel-loader": "8.0.5",
-    "core-js": "2.6.4",
+    "core-js": "2.6.5",
     "css-loader": "2.1.0",
-    "cssnano": "4.1.8",
+    "cssnano": "4.1.10",
     "del": "^3.0.0",
     "file-loader": "3.0.1",
     "gulp": "^4.0.0",
@@ -38,7 +38,7 @@
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "4.7.2",
     "normalize.css": "8.0.1",
-    "plyr": "^3.4.8",
+    "plyr": "3.5.0",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
@@ -51,7 +51,7 @@
     "text-encoding": "0.7.0",
     "uglifyjs-webpack-plugin": "2.1.1",
     "url-loader": "1.1.2",
-    "webpack": "4.29.3",
+    "webpack": "4.29.5",
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "3.0.0"
   },
