--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@babel/core": "7.3.3",
-    "@babel/plugin-proposal-class-properties": "7.3.3",
+    "@babel/core": "7.3.4",
+    "@babel/plugin-proposal-class-properties": "7.3.4",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.3.2",
+    "@babel/plugin-proposal-object-rest-spread": "7.3.4",
     "@babel/plugin-syntax-class-properties": "7.2.0",
     "@babel/plugin-syntax-export-default-from": "7.2.0",
     "@babel/plugin-syntax-export-namespace-from": "7.2.0",
     "@babel/plugin-syntax-object-rest-spread": "7.2.0",
-    "@babel/plugin-transform-regenerator": "^7.0.0",
-    "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/plugin-transform-regenerator": "7.3.4",
+    "@babel/plugin-transform-runtime": "7.3.4",
     "@babel/polyfill": "7.2.5",
-    "@babel/preset-env": "7.3.1",
-    "@babel/runtime": "7.3.1",
-    "amplitudejs": "^4.0.0",
+    "@babel/preset-env": "7.3.4",
+    "@babel/runtime": "7.3.4",
+    "amplitudejs": "4.1.0",
     "babel-loader": "8.0.5",
     "core-js": "2.6.5",
-    "css-loader": "2.1.0",
+    "css-loader": "2.1.1",
     "cssnano": "4.1.10",
-    "del": "^3.0.0",
+    "del": "4.0.0",
     "file-loader": "3.0.1",
     "gulp": "^4.0.0",
     "lodash": "4.17.11",
@@ -38,20 +38,20 @@
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "4.7.2",
     "normalize.css": "8.0.1",
-    "plyr": "3.4.8",
+    "plyr": "3.5.2",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.5.0",
+    "postcss-preset-env": "6.6.0",
     "postcss-reporter": "6.0.1",
     "promise-polyfill": "8.1.0",
     "rucksack-css": "^1.0.2",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "text-encoding": "0.7.0",
-    "uglifyjs-webpack-plugin": "2.1.1",
+    "uglifyjs-webpack-plugin": "2.1.2",
     "url-loader": "1.1.2",
-    "webpack": "4.29.5",
+    "webpack": "4.29.6",
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "3.0.0"
   },
