--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@babel/core": "7.3.4",
-    "@babel/plugin-proposal-class-properties": "7.3.4",
+    "@babel/core": "7.4.0",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.0",
     "@babel/plugin-syntax-class-properties": "7.2.0",
     "@babel/plugin-syntax-export-default-from": "7.2.0",
     "@babel/plugin-syntax-export-namespace-from": "7.2.0",
     "@babel/plugin-syntax-object-rest-spread": "7.2.0",
-    "@babel/plugin-transform-regenerator": "7.3.4",
-    "@babel/plugin-transform-runtime": "7.3.4",
-    "@babel/polyfill": "7.2.5",
-    "@babel/preset-env": "7.3.4",
-    "@babel/runtime": "7.3.4",
+    "@babel/plugin-transform-regenerator": "7.4.0",
+    "@babel/plugin-transform-runtime": "7.4.0",
+    "@babel/preset-env": "7.4.2",
+    "@babel/runtime": "7.4.2",
+    "@babel/runtime-corejs3": "^7.4.2",
     "amplitudejs": "4.1.0",
     "babel-loader": "8.0.5",
-    "core-js": "2.6.5",
+    "core-js": "^3.0.0",
     "css-loader": "2.1.1",
     "cssnano": "4.1.10",
     "del": "4.0.0",
@@ -52,6 +52,7 @@
     "uglifyjs-webpack-plugin": "2.1.2",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
+    "webpack-cli": "^3.3.0",
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "3.0.0"
   },
@@ -67,8 +68,10 @@
               "not op_mini all"
             ]
           },
+          "forceAllTransforms": true,
           "modules": false,
-          "useBuiltIns": "entry"
+          "useBuiltIns": "usage",
+          "corejs": 3
         }
       ]
     ],
@@ -77,16 +80,35 @@
       "@babel/plugin-syntax-export-default-from",
       "@babel/plugin-syntax-export-namespace-from",
       "@babel/plugin-syntax-object-rest-spread",
-      "@babel/plugin-transform-runtime",
-      "@babel/plugin-proposal-class-properties",
+      [
+        "@babel/plugin-transform-runtime",
+        {
+          "helpers": false,
+          "regenerator": true,
+          "corejs": 3
+        }
+      ],
+      [
+        "@babel/plugin-proposal-class-properties",
+        {
+          "loose": true
+        }
+      ],
       "@babel/plugin-proposal-export-default-from",
       "@babel/plugin-proposal-export-namespace-from",
-      "@babel/plugin-proposal-object-rest-spread",
-      "@babel/plugin-transform-regenerator"
+      [
+        "@babel/plugin-proposal-object-rest-spread",
+        {
+          "useBuiltIns": "usage",
+          "corejs": 3
+        }
+      ],
+      [
+        "@babel/plugin-transform-regenerator",
+        {
+          "async": false
+        }
+      ]
     ]
-  },
-  "devDependencies": {
-    "babel-core": "^7.0.0-bridge.0",
-    "webpack-cli": "3.2.3"
   }
 }
