--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "core-js": "^3.0.0",
     "css-loader": "2.1.1",
     "cssnano": "4.1.10",
-    "del": "4.0.0",
+    "del": "4.1.0",
     "file-loader": "3.0.1",
     "gulp": "^4.0.0",
     "lodash": "4.17.11",
@@ -39,7 +39,7 @@
     "node-sass": "4.11.0",
     "normalize.css": "8.0.1",
     "plyr": "3.5.2",
-    "postcss-browser-reporter": "^0.5.0",
+    "postcss-browser-reporter": "0.6.0",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.6.0",
