--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@babel/core": "7.4.0",
+    "@babel/core": "7.4.3",
     "@babel/plugin-proposal-class-properties": "7.4.0",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
     "@babel/plugin-syntax-class-properties": "7.2.0",
     "@babel/plugin-syntax-export-default-from": "7.2.0",
     "@babel/plugin-syntax-export-namespace-from": "7.2.0",
     "@babel/plugin-syntax-object-rest-spread": "7.2.0",
-    "@babel/plugin-transform-regenerator": "7.4.0",
-    "@babel/plugin-transform-runtime": "7.4.0",
-    "@babel/preset-env": "7.4.2",
-    "@babel/runtime": "7.4.2",
-    "@babel/runtime-corejs3": "^7.4.2",
+    "@babel/plugin-transform-regenerator": "7.4.3",
+    "@babel/plugin-transform-runtime": "7.4.3",
+    "@babel/preset-env": "7.4.3",
+    "@babel/runtime": "7.4.3",
+    "@babel/runtime-corejs3": "7.4.3",
     "amplitudejs": "4.1.0",
     "babel-loader": "8.0.5",
-    "core-js": "^3.0.0",
+    "core-js": "3.0.1",
     "css-loader": "2.1.1",
     "cssnano": "4.1.10",
     "del": "4.1.0",
