--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "cssnano": "4.1.10",
     "del": "4.1.0",
     "file-loader": "3.0.1",
-    "gulp": "^4.0.0",
+    "gulp": "4.0.1",
     "lodash": "4.17.11",
     "lost": "8.3.1",
     "mini-css-extract-plugin": "0.6.0",
@@ -52,7 +52,7 @@
     "uglifyjs-webpack-plugin": "2.1.2",
     "url-loader": "1.1.2",
     "webpack": "4.30.0",
-    "webpack-cli": "^3.3.0",
+    "webpack-cli": "3.3.1",
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "3.0.0"
   },
