--- a/package.json
+++ b/package.json
@@ -8,26 +8,27 @@
     "node": "10.13.0"
   },
   "scripts": {
-    "test": "gulp test"
+    "critical": "gulp critical"
   },
   "dependencies": {
-    "@babel/core": "7.5.0",
+    "@babel/core": "7.5.4",
     "@babel/plugin-proposal-class-properties": "7.5.0",
     "@babel/plugin-proposal-export-default-from": "7.5.2",
     "@babel/plugin-proposal-export-namespace-from": "7.5.2",
-    "@babel/plugin-proposal-object-rest-spread": "7.5.2",
+    "@babel/plugin-proposal-object-rest-spread": "7.5.4",
     "@babel/plugin-syntax-class-properties": "7.2.0",
     "@babel/plugin-syntax-export-default-from": "7.2.0",
     "@babel/plugin-syntax-export-namespace-from": "7.2.0",
     "@babel/plugin-syntax-object-rest-spread": "7.2.0",
     "@babel/plugin-transform-regenerator": "7.4.5",
     "@babel/plugin-transform-runtime": "7.5.0",
-    "@babel/preset-env": "7.5.2",
-    "@babel/runtime": "7.5.2",
-    "@babel/runtime-corejs3": "7.5.2",
-    "amplitudejs": "4.1.0",
+    "@babel/preset-env": "7.5.4",
+    "@babel/runtime": "7.5.4",
+    "@babel/runtime-corejs3": "7.5.4",
+    "amplitudejs": "5.0.0",
     "babel-loader": "8.0.6",
     "core-js": "3.1.4",
+    "critical": "^1.3.4",
     "css-loader": "3.0.0",
     "cssnano": "4.1.10",
     "del": "5.0.0",
