--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "text-encoding": "0.7.0",
+    "turbolinks": "^5.2.0",
     "uglifyjs-webpack-plugin": "2.1.3",
     "url-loader": "2.1.0",
     "webpack": "4.38.0",
