--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@babel/runtime-corejs3": "7.5.5",
     "amplitudejs": "5.0.2",
     "babel-loader": "8.0.6",
-    "core-js": "3.2.0",
-    "critical": "^1.3.4",
+    "core-js": "3.2.1",
+    "critical": "1.3.6",
     "css-loader": "3.2.0",
     "cssnano": "4.1.10",
     "del": "5.0.0",
@@ -53,8 +53,8 @@
     "turbolinks": "^5.2.0",
     "uglifyjs-webpack-plugin": "2.2.0",
     "url-loader": "2.1.0",
-    "webpack": "4.39.1",
-    "webpack-cli": "3.3.6",
+    "webpack": "4.39.2",
+    "webpack-cli": "3.3.7",
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "3.0.0"
   },
