--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "critical": "1.3.6",
     "css-loader": "3.2.0",
     "cssnano": "4.1.10",
-    "del": "5.0.0",
+    "del": "5.1.0",
     "file-loader": "4.2.0",
     "gulp": "4.0.2",
     "lodash": "4.17.15",
     "lost": "8.3.1",
     "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "4.12.0",
+    "node-sass": "^4.12.0",
     "normalize.css": "8.0.1",
     "plyr": "3.5.6",
     "postcss-browser-reporter": "0.6.0",
@@ -47,13 +47,13 @@
     "postcss-reporter": "6.0.1",
     "promise-polyfill": "8.1.3",
     "rucksack-css": "^1.0.2",
-    "sass-loader": "7.2.0",
+    "sass-loader": "8.0.0",
     "style-loader": "1.0.0",
     "text-encoding": "0.7.0",
     "turbolinks": "^5.2.0",
     "uglifyjs-webpack-plugin": "2.2.0",
     "url-loader": "2.1.0",
-    "webpack": "4.39.2",
+    "webpack": "4.39.3",
     "webpack-cli": "3.3.7",
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "3.0.0"
