--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "css-loader": "3.2.0",
     "cssnano": "4.1.10",
     "del": "5.1.0",
-    "eventslibjs": "^1.2.0",
+    "delegated-events": "^1.1.1",
     "file-loader": "4.2.0",
     "gulp": "4.0.2",
     "lodash": "4.17.15",
