--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
     "critical": "gulp critical"
   },
   "dependencies": {
-    "@babel/core": "7.6.0",
-    "@babel/plugin-proposal-class-properties": "7.5.5",
+    "@babel/core": "7.7.2",
+    "@babel/plugin-proposal-class-properties": "7.7.0",
     "@babel/plugin-proposal-export-default-from": "7.5.2",
     "@babel/plugin-proposal-export-namespace-from": "7.5.2",
-    "@babel/plugin-proposal-object-rest-spread": "7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.6.2",
     "@babel/plugin-syntax-class-properties": "7.2.0",
     "@babel/plugin-syntax-export-default-from": "7.2.0",
     "@babel/plugin-syntax-export-namespace-from": "7.2.0",
     "@babel/plugin-syntax-object-rest-spread": "7.2.0",
-    "@babel/plugin-transform-regenerator": "7.4.5",
-    "@babel/plugin-transform-runtime": "7.6.0",
-    "@babel/preset-env": "7.6.0",
-    "@babel/runtime": "7.6.0",
-    "@babel/runtime-corejs3": "7.6.0",
-    "amplitudejs": "5.0.2",
+    "@babel/plugin-transform-regenerator": "7.7.0",
+    "@babel/plugin-transform-runtime": "7.6.2",
+    "@babel/preset-env": "7.7.1",
+    "@babel/runtime": "7.7.2",
+    "@babel/runtime-corejs3": "7.7.2",
+    "amplitudejs": "5.0.3",
     "babel-loader": "8.0.6",
-    "core-js": "3.3.4",
-    "critical": "1.3.6",
+    "core-js": "3.4.0",
+    "critical": "1.3.7",
     "css-loader": "3.2.0",
     "cssnano": "4.1.10",
     "del": "5.1.0",
@@ -38,7 +38,7 @@
     "lodash": "4.17.15",
     "lost": "8.3.1",
     "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "4.13.0",
     "normalize.css": "8.0.1",
     "plyr": "3.5.6",
     "postcss-browser-reporter": "0.6.0",
@@ -55,7 +55,7 @@
     "uglifyjs-webpack-plugin": "2.2.0",
     "url-loader": "2.2.0",
     "webpack": "4.41.2",
-    "webpack-cli": "3.3.9",
+    "webpack-cli": "3.3.10",
     "webpack-manifest-plugin": "2.2.0",
     "whatwg-fetch": "3.0.0"
   },
