--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
     "critical": "gulp critical"
   },
   "dependencies": {
-    "@babel/core": "7.8.7",
+    "@babel/core": "7.9.0",
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@babel/plugin-proposal-export-default-from": "7.8.3",
     "@babel/plugin-proposal-export-namespace-from": "7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.9.0",
     "@babel/plugin-syntax-class-properties": "7.8.3",
     "@babel/plugin-syntax-export-default-from": "7.8.3",
     "@babel/plugin-syntax-export-namespace-from": "7.8.3",
     "@babel/plugin-syntax-object-rest-spread": "7.8.3",
     "@babel/plugin-transform-regenerator": "7.8.7",
-    "@babel/plugin-transform-runtime": "7.8.3",
-    "@babel/preset-env": "7.8.7",
-    "@babel/runtime": "7.8.7",
-    "@babel/runtime-corejs3": "7.8.7",
+    "@babel/plugin-transform-runtime": "7.9.0",
+    "@babel/preset-env": "7.9.0",
+    "@babel/runtime": "7.9.2",
+    "@babel/runtime-corejs3": "7.9.2",
     "amplitudejs": "5.0.3",
-    "babel-loader": "8.0.6",
+    "babel-loader": "8.1.0",
     "core-js": "3.6.4",
     "critical": "1.3.9",
     "css-loader": "3.4.2",
     "cssnano": "4.1.10",
     "del": "5.1.0",
     "delegated-events": "^1.1.1",
-    "file-loader": "5.1.0",
+    "file-loader": "6.0.0",
     "gulp": "4.0.2",
     "lodash": "4.17.15",
     "lost": "8.3.1",
@@ -50,10 +50,10 @@
     "rucksack-css": "^1.0.2",
     "sass-loader": "8.0.2",
     "style-loader": "1.1.3",
+    "terser-webpack-plugin": "^2.3.5",
     "text-encoding": "0.7.0",
     "turbolinks": "^5.2.0",
-    "uglifyjs-webpack-plugin": "2.2.0",
-    "url-loader": "3.0.0",
+    "url-loader": "4.0.0",
     "webpack": "4.42.0",
     "webpack-cli": "3.3.11",
     "webpack-manifest-plugin": "2.2.0",
