--- a/package.json
+++ b/package.json
@@ -15,24 +15,24 @@
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@babel/plugin-proposal-export-default-from": "7.8.3",
     "@babel/plugin-proposal-export-namespace-from": "7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "7.9.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.9.5",
     "@babel/plugin-syntax-class-properties": "7.8.3",
     "@babel/plugin-syntax-export-default-from": "7.8.3",
     "@babel/plugin-syntax-export-namespace-from": "7.8.3",
     "@babel/plugin-syntax-object-rest-spread": "7.8.3",
     "@babel/plugin-transform-regenerator": "7.8.7",
     "@babel/plugin-transform-runtime": "7.9.0",
-    "@babel/preset-env": "7.9.0",
+    "@babel/preset-env": "7.9.5",
     "@babel/runtime": "7.9.2",
     "@babel/runtime-corejs3": "7.9.2",
     "amplitudejs": "5.0.3",
     "babel-loader": "8.1.0",
-    "core-js": "3.6.4",
+    "core-js": "3.6.5",
     "critical": "1.3.9",
-    "css-loader": "3.4.2",
+    "css-loader": "3.5.2",
     "cssnano": "4.1.10",
     "del": "5.1.0",
-    "delegated-events": "^1.1.1",
+    "delegated-events": "1.1.2",
     "file-loader": "6.0.0",
     "gulp": "4.0.2",
     "lodash": "4.17.15",
@@ -53,8 +53,8 @@
     "terser-webpack-plugin": "^2.3.5",
     "text-encoding": "0.7.0",
     "turbolinks": "^5.2.0",
-    "url-loader": "4.0.0",
-    "webpack": "4.42.0",
+    "url-loader": "4.1.0",
+    "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
     "webpack-manifest-plugin": "2.2.0",
     "whatwg-fetch": "3.0.0"
