--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "babel-loader": "8.1.0",
     "core-js": "3.6.5",
     "critical": "1.3.9",
-    "css-loader": "3.5.2",
+    "css-loader": "3.5.3",
     "cssnano": "4.1.10",
     "del": "5.1.0",
     "delegated-events": "1.1.2",
@@ -38,7 +38,7 @@
     "lodash": "4.17.15",
     "lost": "8.3.1",
     "mini-css-extract-plugin": "0.9.0",
-    "node-sass": "4.13.1",
+    "node-sass": "4.14.0",
     "normalize.css": "8.0.1",
     "plyr": "3.5.10",
     "postcss-browser-reporter": "0.6.0",
@@ -49,12 +49,12 @@
     "promise-polyfill": "8.1.3",
     "rucksack-css": "^1.0.2",
     "sass-loader": "8.0.2",
-    "style-loader": "1.1.4",
-    "terser-webpack-plugin": "^2.3.5",
+    "style-loader": "1.2.0",
+    "terser-webpack-plugin": "2.3.6",
     "text-encoding": "0.7.0",
     "turbolinks": "^5.2.0",
     "url-loader": "4.1.0",
-    "webpack": "4.42.1",
+    "webpack": "4.43.0",
     "webpack-cli": "3.3.11",
     "webpack-manifest-plugin": "2.2.0",
     "whatwg-fetch": "3.0.0"
