--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
     "critical": "gulp critical"
   },
   "dependencies": {
-    "@babel/core": "7.10.2",
-    "@babel/plugin-proposal-class-properties": "7.10.1",
-    "@babel/plugin-proposal-export-default-from": "7.10.1",
-    "@babel/plugin-proposal-export-namespace-from": "7.10.1",
-    "@babel/plugin-proposal-object-rest-spread": "7.10.1",
-    "@babel/plugin-syntax-class-properties": "7.10.1",
-    "@babel/plugin-syntax-export-default-from": "7.10.1",
+    "@babel/core": "7.10.4",
+    "@babel/plugin-proposal-class-properties": "7.10.4",
+    "@babel/plugin-proposal-export-default-from": "7.10.4",
+    "@babel/plugin-proposal-export-namespace-from": "7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.10.4",
+    "@babel/plugin-syntax-class-properties": "7.10.4",
+    "@babel/plugin-syntax-export-default-from": "7.10.4",
     "@babel/plugin-syntax-export-namespace-from": "7.8.3",
     "@babel/plugin-syntax-object-rest-spread": "7.8.3",
-    "@babel/plugin-transform-regenerator": "7.10.1",
-    "@babel/plugin-transform-runtime": "7.10.1",
-    "@babel/preset-env": "7.10.2",
-    "@babel/runtime": "7.10.2",
-    "@babel/runtime-corejs3": "7.10.2",
+    "@babel/plugin-transform-regenerator": "7.10.4",
+    "@babel/plugin-transform-runtime": "7.10.4",
+    "@babel/preset-env": "7.10.4",
+    "@babel/runtime": "7.10.4",
+    "@babel/runtime-corejs3": "7.10.4",
     "amplitudejs": "5.1.0",
     "babel-loader": "8.1.0",
     "core-js": "3.6.5",
@@ -38,7 +38,6 @@
     "lodash": "4.17.15",
     "lost": "8.3.1",
     "mini-css-extract-plugin": "0.9.0",
-    "node-sass": "4.14.1",
     "normalize.css": "8.0.1",
     "plyr": "3.6.2",
     "postcss-browser-reporter": "0.6.0",
@@ -48,7 +47,8 @@
     "postcss-reporter": "6.0.1",
     "promise-polyfill": "8.1.3",
     "rucksack-css": "^1.0.2",
-    "sass-loader": "8.0.2",
+    "sass": "^1.26.10",
+    "sass-loader": "9.0.1",
     "style-loader": "1.2.1",
     "terser-webpack-plugin": "3.0.6",
     "text-encoding": "0.7.0",
