--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "node": "12.13.1"
   },
   "scripts": {
-    "critical": "gulp critical"
+    "critical": "gulp critical",
+    "assets:watch": "webpack --watch -d --color",
+    "assets:build": "gulp cleanup:assets && NODE_ENV=production webpack --bail"
   },
   "dependencies": {
     "@babel/core": "7.10.5",
