--- a/package.json
+++ b/package.json
@@ -60,5 +60,12 @@
     "webpack-cli": "3.3.12",
     "webpack-manifest-plugin": "2.2.0",
     "whatwg-fetch": "3.2.0"
+  },
+  "devDependencies": {
+    "gray-matter": "^4.0.2",
+    "html-to-text": "^5.1.1",
+    "marked": "^1.1.1",
+    "minimist": "^1.2.5",
+    "node-id3": "^0.1.18"
   }
 }
