--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "assets:build": "gulp cleanup:assets && NODE_ENV=production webpack --bail"
   },
   "dependencies": {
-    "@babel/core": "7.11.4",
+    "@babel/core": "7.11.6",
     "@babel/plugin-proposal-class-properties": "7.10.4",
     "@babel/plugin-proposal-export-default-from": "7.10.4",
     "@babel/plugin-proposal-export-namespace-from": "7.10.4",
@@ -23,34 +23,35 @@
     "@babel/plugin-syntax-export-namespace-from": "7.8.3",
     "@babel/plugin-syntax-object-rest-spread": "7.8.3",
     "@babel/plugin-transform-regenerator": "7.10.4",
-    "@babel/plugin-transform-runtime": "7.11.0",
-    "@babel/preset-env": "7.11.0",
+    "@babel/plugin-transform-runtime": "7.11.5",
+    "@babel/preset-env": "7.11.5",
     "@babel/runtime": "7.11.2",
     "@babel/runtime-corejs3": "7.11.2",
     "amplitudejs": "5.2.0",
     "babel-loader": "8.1.0",
     "core-js": "3.6.5",
-    "critical": "2.0.3",
-    "css-loader": "4.2.1",
+    "critical": "2.0.4",
+    "css-loader": "4.2.2",
     "cssnano": "4.1.10",
     "del": "5.1.0",
     "delegated-events": "1.1.2",
-    "file-loader": "6.0.0",
+    "file-loader": "6.1.0",
     "gulp": "4.0.2",
     "lodash": "4.17.20",
     "lost": "8.3.1",
-    "mini-css-extract-plugin": "0.10.0",
+    "mini-css-extract-plugin": "0.11.0",
     "normalize.css": "8.0.1",
     "plyr": "3.6.2",
+    "postcss": "^7.0.32",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "12.0.1",
-    "postcss-loader": "3.0.0",
+    "postcss-loader": "4.0.0",
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "6.0.1",
     "promise-polyfill": "8.1.3",
     "rucksack-css": "^1.0.2",
     "sass": "^1.26.10",
-    "sass-loader": "9.0.3",
+    "sass-loader": "10.0.2",
     "style-loader": "1.2.1",
     "terser-webpack-plugin": "4.1.0",
     "text-encoding": "0.7.0",
@@ -59,7 +60,7 @@
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
     "webpack-manifest-plugin": "2.2.0",
-    "whatwg-fetch": "3.4.0"
+    "whatwg-fetch": "3.4.1"
   },
   "devDependencies": {
     "gray-matter": "^4.0.2",
