--- a/package.json
+++ b/package.json
@@ -42,22 +42,22 @@
     "mini-css-extract-plugin": "0.11.2",
     "normalize.css": "8.0.1",
     "plyr": "3.6.2",
-    "postcss": "^7.0.32",
+    "postcss": "7.0.34",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "12.0.1",
-    "postcss-loader": "4.0.1",
+    "postcss-loader": "4.0.2",
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "6.0.1",
     "promise-polyfill": "8.1.3",
     "rucksack-css": "^1.0.2",
-    "sass": "^1.26.10",
+    "sass": "1.26.11",
     "sass-loader": "10.0.2",
     "style-loader": "1.2.1",
-    "terser-webpack-plugin": "4.2.0",
+    "terser-webpack-plugin": "4.2.2",
     "text-encoding": "0.7.0",
     "turbolinks": "^5.2.0",
     "url-loader": "4.1.0",
-    "webpack": "4.44.1",
+    "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webpack-manifest-plugin": "2.2.0",
     "whatwg-fetch": "3.4.1"
