--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "critical": "2.0.4",
     "css-loader": "4.3.0",
     "cssnano": "4.1.10",
-    "del": "5.1.0",
+    "del": "6.0.0",
     "delegated-events": "1.1.2",
     "file-loader": "6.1.0",
     "gulp": "4.0.2",
@@ -42,12 +42,12 @@
     "mini-css-extract-plugin": "0.11.2",
     "normalize.css": "8.0.1",
     "plyr": "3.6.2",
-    "postcss": "7.0.34",
+    "postcss": "8.1.0",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "12.0.1",
     "postcss-loader": "4.0.2",
     "postcss-preset-env": "6.7.0",
-    "postcss-reporter": "6.0.1",
+    "postcss-reporter": "7.0.1",
     "promise-polyfill": "8.1.3",
     "rucksack-css": "^1.0.2",
     "sass": "1.26.11",
@@ -67,6 +67,6 @@
     "html-to-text": "^5.1.1",
     "marked": "^1.1.1",
     "minimist": "^1.2.5",
-    "node-id3": "^0.1.18"
+    "node-id3": "0.1.19"
   }
 }
