--- a/package.json
+++ b/package.json
@@ -39,20 +39,20 @@
     "gulp": "4.0.2",
     "lodash": "4.17.20",
     "lost": "8.3.1",
-    "mini-css-extract-plugin": "0.11.2",
+    "mini-css-extract-plugin": "0.11.3",
     "normalize.css": "8.0.1",
     "plyr": "3.6.2",
-    "postcss": "8.1.0",
+    "postcss": "8.1.1",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "12.0.1",
-    "postcss-loader": "4.0.2",
+    "postcss-loader": "4.0.3",
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "7.0.1",
     "promise-polyfill": "8.1.3",
     "rucksack-css": "^1.0.2",
     "sass": "1.26.11",
     "sass-loader": "10.0.2",
-    "style-loader": "1.2.1",
+    "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.2",
     "text-encoding": "0.7.0",
     "turbolinks": "^5.2.0",
@@ -65,7 +65,7 @@
   "devDependencies": {
     "gray-matter": "^4.0.2",
     "html-to-text": "^5.1.1",
-    "marked": "^1.1.1",
+    "marked": "1.2.0",
     "minimist": "^1.2.5",
     "node-id3": "0.1.19"
   }
