--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "critical": "gulp critical",
-    "assets:watch": "webpack --watch -d --color",
+    "assets:watch": "webpack --watch --color",
     "assets:build": "gulp cleanup:assets && NODE_ENV=production webpack --bail"
   },
   "dependencies": {
@@ -30,36 +30,36 @@
     "amplitudejs": "5.2.0",
     "babel-loader": "8.1.0",
     "core-js": "3.6.5",
-    "critical": "2.0.4",
+    "critical": "2.0.5",
     "css-loader": "4.3.0",
     "cssnano": "4.1.10",
     "del": "6.0.0",
     "delegated-events": "1.1.2",
-    "file-loader": "6.1.0",
+    "file-loader": "6.1.1",
     "gulp": "4.0.2",
     "lodash": "4.17.20",
     "lost": "8.3.1",
-    "mini-css-extract-plugin": "0.11.3",
+    "mini-css-extract-plugin": "1.0.0",
     "normalize.css": "8.0.1",
     "plyr": "3.6.2",
     "postcss": "8.1.1",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "12.0.1",
-    "postcss-loader": "4.0.3",
+    "postcss-loader": "4.0.4",
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "7.0.1",
     "promise-polyfill": "8.1.3",
     "rucksack-css": "^1.0.2",
-    "sass": "1.26.11",
-    "sass-loader": "10.0.2",
-    "style-loader": "1.3.0",
-    "terser-webpack-plugin": "4.2.2",
+    "sass": "1.27.0",
+    "sass-loader": "10.0.3",
+    "style-loader": "2.0.0",
+    "terser-webpack-plugin": "4.2.3",
     "text-encoding": "0.7.0",
     "turbolinks": "^5.2.0",
-    "url-loader": "4.1.0",
-    "webpack": "4.44.2",
-    "webpack-cli": "3.3.12",
-    "webpack-manifest-plugin": "2.2.0",
+    "url-loader": "4.1.1",
+    "webpack": "5.0.0",
+    "webpack-cli": "4.0.0",
+    "webpack-manifest-plugin": "3.0.0-rc.0",
     "whatwg-fetch": "3.4.1"
   },
   "devDependencies": {
