--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "pgtune",
-  "description": "pgtune website",
+  "name": "rwpod",
+  "description": "rwpod website",
   "author": "Alexey Vasiliev",
   "version": "0.1.0",
   "license": "MIT",
   "engines": {
-    "node": "12.13.1"
+    "node": "14.15.0"
   },
   "scripts": {
     "critical": "gulp critical",
@@ -30,16 +30,16 @@
     "amplitudejs": "5.2.0",
     "babel-loader": "8.1.0",
     "core-js": "3.6.5",
-    "critical": "2.0.5",
+    "critical": "2.0.6",
     "css-loader": "5.0.0",
     "cssnano": "4.1.10",
     "del": "6.0.0",
     "delegated-events": "1.1.2",
-    "file-loader": "6.1.1",
+    "file-loader": "6.2.0",
     "gulp": "4.0.2",
     "lodash": "4.17.20",
     "lost": "8.3.1",
-    "mini-css-extract-plugin": "1.2.0",
+    "mini-css-extract-plugin": "1.2.1",
     "normalize.css": "8.0.1",
     "plyr": "3.6.2",
     "postcss": "8.1.4",
@@ -50,23 +50,23 @@
     "postcss-reporter": "7.0.1",
     "promise-polyfill": "8.2.0",
     "rucksack-css": "^1.0.2",
-    "sass": "1.27.0",
+    "sass": "1.28.0",
     "sass-loader": "10.0.4",
     "style-loader": "2.0.0",
-    "terser-webpack-plugin": "5.0.1",
+    "terser-webpack-plugin": "5.0.3",
     "text-encoding": "0.7.0",
     "turbolinks": "^5.2.0",
     "url-loader": "4.1.1",
-    "webpack": "5.2.0",
+    "webpack": "5.3.2",
     "webpack-cli": "4.1.0",
     "webpack-manifest-plugin": "3.0.0-rc.0",
     "whatwg-fetch": "3.4.1"
   },
   "devDependencies": {
     "gray-matter": "^4.0.2",
-    "html-to-text": "^5.1.1",
+    "html-to-text": "6.0.0",
     "marked": "1.2.2",
     "minimist": "^1.2.5",
-    "node-id3": "0.1.21"
+    "node-id3": "0.2.1"
   }
 }
