--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@babel/runtime": "7.12.5",
     "@babel/runtime-corejs3": "7.12.5",
     "amplitudejs": "5.2.0",
-    "babel-loader": "8.1.0",
+    "babel-loader": "8.2.1",
     "core-js": "3.7.0",
     "critical": "2.0.6",
     "css-loader": "5.0.1",
@@ -39,10 +39,10 @@
     "gulp": "4.0.2",
     "lodash": "4.17.20",
     "lost": "8.3.1",
-    "mini-css-extract-plugin": "1.3.0",
+    "mini-css-extract-plugin": "1.3.1",
     "normalize.css": "8.0.1",
-    "plyr": "3.6.2",
-    "postcss": "8.1.6",
+    "plyr": "3.6.3",
+    "postcss": "8.1.7",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "13.0.0",
     "postcss-loader": "4.0.4",
@@ -51,21 +51,21 @@
     "promise-polyfill": "8.2.0",
     "rucksack-css": "^1.0.2",
     "sass": "1.29.0",
-    "sass-loader": "10.0.5",
+    "sass-loader": "10.1.0",
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.0.3",
     "text-encoding": "0.7.0",
     "turbolinks": "^5.2.0",
     "url-loader": "4.1.1",
     "webpack": "5.4.0",
+    "webpack-assets-manifest": "^3.1.1",
     "webpack-cli": "4.2.0",
-    "webpack-manifest-plugin": "3.0.0-rc.0",
     "whatwg-fetch": "3.5.0"
   },
   "devDependencies": {
     "gray-matter": "^4.0.2",
     "html-to-text": "6.0.0",
-    "marked": "1.2.3",
+    "marked": "1.2.4",
     "minimist": "^1.2.5",
     "node-id3": "0.2.1"
   }
