--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@babel/runtime-corejs3": "7.12.5",
     "amplitudejs": "5.2.0",
     "babel-loader": "8.2.2",
-    "core-js": "3.8.0",
+    "core-js": "3.8.1",
     "critical": "2.0.6",
     "css-loader": "5.0.1",
     "cssnano": "4.1.10",
@@ -39,26 +39,26 @@
     "gulp": "4.0.2",
     "lodash": "4.17.20",
     "lost": "8.3.1",
-    "mini-css-extract-plugin": "1.3.1",
+    "mini-css-extract-plugin": "1.3.2",
     "normalize.css": "8.0.1",
     "plyr": "3.6.3",
-    "postcss": "8.1.10",
+    "postcss": "8.1.14",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "13.0.0",
     "postcss-loader": "4.1.0",
     "postcss-preset-env": "6.7.0",
-    "postcss-reporter": "7.0.1",
+    "postcss-reporter": "7.0.2",
     "promise-polyfill": "8.2.0",
     "rucksack-css": "^1.0.2",
-    "sass": "1.29.0",
+    "sass": "1.30.0",
     "sass-loader": "10.1.0",
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.0.3",
     "text-encoding": "0.7.0",
     "turbolinks": "^5.2.0",
     "url-loader": "4.1.1",
-    "webpack": "5.9.0",
-    "webpack-assets-manifest": "^3.1.1",
+    "webpack": "5.10.0",
+    "webpack-assets-manifest": "5.0.0",
     "webpack-cli": "4.2.0",
     "whatwg-fetch": "3.5.0"
   },
