--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "del": "6.0.0",
     "delegated-events": "1.1.2",
     "file-loader": "6.2.0",
+    "focus-visible": "^5.2.0",
     "gulp": "4.0.2",
     "lodash": "4.17.20",
     "lost": "8.3.1",
