--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "postcss-loader": "4.1.0",
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "7.0.2",
-    "promise-polyfill": "8.2.0",
     "rucksack-css": "^1.0.2",
     "sass": "1.30.0",
     "sass-loader": "10.1.0",
@@ -51,8 +50,7 @@
     "url-loader": "4.1.1",
     "webpack": "5.11.0",
     "webpack-assets-manifest": "5.0.0",
-    "webpack-cli": "4.2.0",
-    "whatwg-fetch": "3.5.0"
+    "webpack-cli": "4.2.0"
   },
   "devDependencies": {
     "gray-matter": "^4.0.2",
