--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "url-loader": "4.1.1",
     "webpack": "5.11.0",
     "webpack-assets-manifest": "5.0.0",
-    "webpack-cli": "4.3.0"
+    "webpack-cli": "4.3.0",
+    "workbox-webpack-plugin": "^6.0.2",
+    "workbox-window": "^6.0.2"
   },
   "devDependencies": {
     "gray-matter": "^4.0.2",
