--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,3 @@
-inherit_from: .rubocop_todo.yml
-
 require:
   - rubocop-performance
   - rubocop-rake
@@ -8,6 +6,15 @@ AllCops:
   NewCops: enable
   Exclude:
     - 'node_modules/**/*'
+
+Metrics/MethodLength:
+  Max: 12
+
+Metrics/BlockLength:
+  Max: 30
+
+Metrics/AbcSize:
+  Max: 21
 
 Lint/DeprecatedOpenSSLConstant:
   Enabled: true
