fix webpack conf

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -6,7 +6,7 @@ pre-commit:
       run: bundle exec rubocop -c ./.rubocop.yml {staged_files}
     eslint:
       glob: '*.{js,jsx}'
-      exclude: '(babel|postcss|linaria|browserlist)\.config\.js|vendor\/assets\/javascripts\/modernizr.js'
+      exclude: '(babel|postcss|linaria|browserlist)\.config\.js'
       run: ./node_modules/.bin/eslint {staged_files}
     bundle-check:
       files: git diff --name-only HEAD master
