--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@babel/runtime-corejs3": "7.12.5",
     "amplitudejs": "5.2.0",
     "babel-loader": "8.2.2",
-    "core-js": "3.8.1",
+    "core-js": "3.8.2",
     "critical": "2.0.6",
     "css-loader": "5.0.1",
     "cssnano": "4.1.10",
@@ -35,14 +35,14 @@
     "mini-css-extract-plugin": "1.3.3",
     "normalize.css": "8.0.1",
     "plyr": "3.6.3",
-    "postcss": "8.2.2",
+    "postcss": "8.2.3",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "14.0.0",
     "postcss-loader": "4.1.0",
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "7.0.2",
     "rucksack-css": "^1.0.2",
-    "sass": "1.32.0",
+    "sass": "1.32.2",
     "sass-loader": "10.1.0",
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.0.3",
@@ -57,12 +57,12 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.16.0",
+    "eslint": "7.17.0",
     "eslint-plugin-import": "^2.22.1",
     "gray-matter": "^4.0.2",
     "html-to-text": "6.0.0",
     "marked": "1.2.7",
     "minimist": "^1.2.5",
-    "node-id3": "0.2.1"
+    "node-id3": "0.2.2"
   }
 }
