--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "gulp": "4.0.2",
     "lodash": "4.17.20",
     "lost": "8.3.1",
-    "mini-css-extract-plugin": "1.3.4",
+    "mini-css-extract-plugin": "1.3.5",
     "normalize.css": "8.0.1",
-    "plyr": "3.6.3",
+    "plyr": "3.6.4",
     "postcss": "8.2.4",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "14.0.0",
@@ -49,11 +49,11 @@
     "text-encoding": "0.7.0",
     "turbolinks": "^5.2.0",
     "url-loader": "4.1.1",
-    "webpack": "5.17.0",
+    "webpack": "5.19.0",
     "webpack-assets-manifest": "5.0.1",
     "webpack-cli": "4.4.0",
-    "workbox-webpack-plugin": "^6.0.2",
-    "workbox-window": "^6.0.2"
+    "workbox-webpack-plugin": "6.1.0",
+    "workbox-window": "6.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -61,7 +61,7 @@
     "eslint-plugin-import": "^2.22.1",
     "gray-matter": "^4.0.2",
     "html-to-text": "6.0.0",
-    "marked": "1.2.7",
+    "marked": "1.2.8",
     "minimist": "^1.2.5",
     "node-id3": "0.2.2"
   }
