--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "3.8.3",
     "critical": "2.0.6",
     "css-loader": "5.0.2",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "cssnano": "4.1.10",
     "del": "6.0.0",
     "delegated-events": "1.1.2",
