--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@babel/preset-env": "7.13.12",
     "@babel/runtime": "7.13.10",
     "@babel/runtime-corejs3": "7.13.10",
-    "@hotwired/turbo": "^7.0.0-beta.4",
     "amplitudejs": "5.3.0",
     "babel-loader": "8.2.2",
     "core-js": "3.9.1",
@@ -50,6 +49,7 @@
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.1.1",
     "text-encoding": "0.7.0",
+    "turbolinks": "^5.2.0",
     "url-loader": "4.1.1",
     "webpack": "5.28.0",
     "webpack-assets-manifest": "5.0.1",
