--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@
 .cache
 node_modules/
 yarn-error.log
+
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
