migrate to new yarn 2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
             v1-${{ runner.os }}-yarn-
 
       - name: Install Javascript dependencies
-        run: yarn install --immutable
+        run: yarn install --immutable --immutable-cache
 
       - name: Build website
         run: bundle exec middleman build
