--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@babel/preset-env": "7.15.6",
     "@babel/runtime": "7.15.4",
     "@babel/runtime-corejs3": "7.15.4",
-    "@hotwired/turbo": "7.0.0-rc.4",
+    "@hotwired/stimulus": "^3.0.0",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
+    "@hotwired/turbo": "7.0.0",
     "babel-loader": "8.2.2",
     "core-js": "3.18.0",
     "critical": "4.0.1",
@@ -49,7 +51,6 @@
     "rucksack-css": "^1.0.2",
     "sass": "1.39.2",
     "sass-loader": "12.1.0",
-    "stimulus": "^2.0.0",
     "style-loader": "3.3.0",
     "terser-webpack-plugin": "5.2.4",
     "url-loader": "4.1.1",
