give cache name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,7 @@ jobs:
 
       - uses: actions/cache@v2
         with:
+          name: FE build cache cache
           path: |
             tmp/cache
           key: ${{ runner.os }}-builder-cache-${{ hashFiles('**/yarn.lock') }}
