--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "lint": "eslint --ext .jsx,.js assets/"
   },
   "dependencies": {
-    "@babel/core": "7.18.9",
-    "@babel/plugin-transform-runtime": "7.18.9",
-    "@babel/preset-env": "7.18.9",
+    "@babel/core": "7.18.13",
+    "@babel/plugin-transform-runtime": "7.18.10",
+    "@babel/preset-env": "7.18.10",
     "@babel/runtime": "7.18.9",
     "@babel/runtime-corejs3": "7.18.9",
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@hotwired/turbo": "7.1.0",
     "babel-loader": "8.2.5",
-    "core-js": "3.24.0",
+    "core-js": "3.25.0",
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "4.0.0",
     "delegated-events": "1.1.2",
@@ -35,33 +35,34 @@
     "mini-css-extract-plugin": "2.6.1",
     "normalize.css": "8.0.1",
     "plyr": "^3.7.2",
-    "postcss": "8.4.14",
+    "postcss": "8.4.16",
     "postcss-import": "14.1.0",
     "postcss-loader": "7.0.1",
-    "postcss-preset-env": "7.7.2",
+    "postcss-preset-env": "7.8.0",
     "postcss-reporter": "7.0.5",
     "style-loader": "3.3.1",
-    "terser-webpack-plugin": "5.3.3",
+    "terser-webpack-plugin": "5.3.6",
     "url-loader": "4.1.1",
     "webpack": "5.74.0",
     "webpack-assets-manifest": "5.1.0",
     "webpack-cli": "4.10.0",
-    "workbox-core": "^6.5.3",
-    "workbox-expiration": "^6.5.3",
-    "workbox-precaching": "^6.5.3",
-    "workbox-routing": "^6.5.3",
-    "workbox-strategies": "^6.5.3",
-    "workbox-webpack-plugin": "6.5.3",
-    "workbox-window": "6.5.3"
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-webpack-plugin": "6.5.4",
+    "workbox-window": "6.5.4"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.18.9",
-    "eslint": "8.20.0",
+    "eslint": "8.23.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "2.26.0",
     "gray-matter": "4.0.3",
-    "html-to-text": "8.2.0",
-    "marked": "4.0.18",
+    "html-to-text": "8.2.1",
+    "marked": "4.0.19",
     "minimist": "^1.2.6"
-  }
+  },
+  "packageManager": "yarn@3.2.3"
 }
