Start migration to Astro

--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
     "dayjs": "^1.11.6",
     "delegated-events": "1.1.2",
     "flexsearch": "^0.7.31",
-    "focus-visible": "^5.2.0",
     "gulp": "4.0.2",
+    "liquidjs": "^9.42.1",
     "mark.js": "^8.11.1",
-    "normalize.css": "8.0.1",
     "plyr": "^3.7.3",
     "postcss": "8.4.19",
     "postcss-import": "15.0.0",
@@ -43,6 +42,7 @@
     "postcss-loader": "7.0.1",
     "postcss-preset-env": "7.8.3",
     "postcss-reporter": "7.0.5",
+    "reseter.css": "^2.0.0",
     "svelte": "3.53.1",
     "workbox-build": "^6.5.4",
     "workbox-core": "^6.5.4",
