--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "astro-compress": "^1.1.7",
     "core-js": "^3.26.1",
     "dayjs": "^1.11.6",
-    "dedent-js": "^1.0.1",
     "delegated-events": "1.1.2",
     "flexsearch": "^0.7.31",
     "gulp": "4.0.2",
@@ -50,6 +49,7 @@
     "reseter.css": "^2.0.0",
     "svelte": "3.53.1",
     "unist-util-filter": "^4.0.0",
+    "unist-util-remove": "^3.1.0",
     "vite": "^3.2.4",
     "workbox-build": "^6.5.4",
     "workbox-core": "^6.5.4",
