start main page

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@rollup/plugin-yaml": "^4.0.1",
     "astro": "^1.6.10",
     "astro-compress": "^1.1.7",
+    "astro-icon": "^0.8.0",
     "core-js": "^3.26.1",
     "dayjs": "^1.11.6",
     "delegated-events": "1.1.2",
