--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "optimize": "gulp optimize",
-    "lint": "eslint src/ astro.config.mjs postcss.config.js browserslist.config.js"
+    "lint": "eslint src/**/*.{js,mjs,astro} astro.config.mjs postcss.config.js browserslist.config.js"
   },
   "dependencies": {
     "@astrojs/rss": "^1.0.3",
@@ -64,8 +64,10 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "astro-eslint-parser": "^0.9.0",
     "eslint": "8.28.0",
     "eslint-import-resolver-node": "^0.3.6",
+    "eslint-plugin-astro": "^0.21.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "gray-matter": "4.0.3",
