--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "optimize": "gulp optimize",
-    "lint": "eslint src/**/*.{js,mjs,astro} astro.config.mjs postcss.config.js browserslist.config.js"
+    "lint": "eslint src/**/*.{js,mjs,astro,svelte} astro.config.mjs postcss.config.js browserslist.config.js"
   },
   "dependencies": {
     "@astrojs/rss": "^1.0.3",
