--- a/package.json
+++ b/package.json
@@ -22,27 +22,28 @@
     "@hotwired/turbo": "7.2.4",
     "@rollup/plugin-yaml": "^4.0.1",
     "@vite-pwa/astro": "^0.0.1",
-    "astro": "^1.6.12",
-    "astro-compress": "^1.1.14",
+    "astro": "^1.6.13",
+    "astro-compress": "^1.1.18",
     "astro-icon": "^0.8.0",
-    "dayjs": "^1.11.6",
+    "dayjs": "^1.11.7",
+    "dom-serializer": "^2.0.0",
     "flexsearch": "^0.7.31",
     "gulp": "4.0.2",
-    "html-to-text": "^8.2.1",
-    "liquidjs": "^10.1.0",
+    "html-to-text": "^9.0.1",
+    "liquidjs": "^10.2.0",
     "lodash": "^4.17.21",
     "mark.js": "^8.11.1",
-    "marked": "^4.2.3",
+    "marked": "^4.2.4",
     "plyr": "^3.7.3",
     "postcss": "8.4.19",
-    "postcss-import": "15.0.0",
+    "postcss-import": "15.0.1",
     "postcss-load-config": "^4.0.1",
     "postcss-preset-env": "7.8.3",
     "postcss-reporter": "7.0.5",
     "rehype-external-links": "^2.0.1",
     "reseter.css": "^2.0.0",
-    "svelte": "3.53.1",
-    "vite": "^3.2.4",
+    "svelte": "3.54.0",
+    "vite": "^3.2.5",
     "vite-plugin-pwa": "^0.13.3",
     "workbox-build": "^6.5.4",
     "workbox-core": "^6.5.4",
@@ -53,8 +54,8 @@
     "workbox-window": "6.5.4"
   },
   "devDependencies": {
-    "astro-eslint-parser": "^0.9.0",
-    "eslint": "8.28.0",
+    "astro-eslint-parser": "^0.9.1",
+    "eslint": "8.29.0",
     "eslint-plugin-astro": "^0.21.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "gray-matter": "4.0.3",
