add astro prettier

--- a/.prettierrc
+++ b/.prettierrc
@@ -10,9 +10,16 @@
   "svelteAllowShorthand": false,
   "svelteIndentScriptAndStyle": true,
   "plugins": [
+    "prettier-plugin-astro",
     "prettier-plugin-svelte"
   ],
   "overrides": [
+    {
+      "files": "*.astro",
+      "options": {
+        "parser": "astro"
+      }
+    },
     {
       "files": "*.svelte",
       "options": {
