partially moved to svelte 5

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:astro/recommended"
+    "plugin:astro/recommended",
+    "plugin:svelte/recommended"
   ],
   "ignorePatterns": ["src/components/HeadAnalytic.astro"],
   "overrides": [
@@ -13,7 +14,7 @@
       "files": [
         "*.svelte"
       ],
-      "processor": "svelte3/svelte3"
+      "parser": "svelte-eslint-parser"
     },
     {
       "files": [
@@ -274,7 +275,6 @@
     "es2022": true
   },
   "plugins": [
-    "astro",
-    "svelte3"
+    "astro"
   ]
 }
