--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@iconify-json/mdi": "^1.2.1",
     "@rollup/plugin-yaml": "^4.1.2",
     "@vite-pwa/astro": "^0.4.3",
-    "astro": "^4.16.6",
+    "astro": "^4.16.7",
     "astro-icon": "1.1.1",
     "dayjs": "^1.11.13",
     "dom-serializer": "^2.0.0",
@@ -38,8 +38,8 @@
     "postcss-reporter": "7.1.0",
     "rehype-external-links": "^3.0.0",
     "reseter.css": "^2.0.0",
-    "svelte": "5.0.1",
-    "vite": "^5.4.9",
+    "svelte": "5.1.3",
+    "vite": "^5.4.10",
     "vite-plugin-pwa": "^0.20.5",
     "workbox-build": "^7.1.1",
     "workbox-core": "^7.1.0",
@@ -54,7 +54,7 @@
     "astro-eslint-parser": "1.0.3",
     "eslint": "8.57.1",
     "eslint-plugin-astro": "^1.3.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-svelte": "^2.46.0",
     "gray-matter": "4.0.3",
     "minimist": "^1.2.8",
     "prettier": "^3.3.3",
