--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,3 +5,7 @@ enableGlobalCache: false
 nodeLinker: node-modules
 
 yarnPath: .yarn/releases/yarn-4.10.3.cjs
+
+supportedArchitectures:
+  os: [linux, darwin]
+  cpu: [x64, arm64]
