--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,8 +4,12 @@ enableGlobalCache: false
 
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-4.10.3.cjs
-
 supportedArchitectures:
-  os: [linux, darwin]
-  cpu: [x64, arm64]
+  cpu:
+    - x64
+    - arm64
+  os:
+    - linux
+    - darwin
+
+yarnPath: .yarn/releases/yarn-4.12.0.cjs
